# idle-garden

./: .gitignore  CREDITS.md  Cargo.toml  push_to_itch.sh
assets/effects/: cut_grass.ron
assets/map/: building_selector_animation.trickfilm.ron
assets/player/: animations.trickfilm.ron
assets/progression/: flora.json
assets/shaders/: clouds_shader.wgsl  flora_shader.wgsl  grass_shader.wgsl
enoki/: Cargo.toml
enoki/src/: lib.rs  update.rs  values.rs
enoki_editor/: Cargo.toml
enoki_editor/src/: file.rs  gui.rs  main.rs
simulation_progress/: main.py  pyproject.toml
src/: main.rs
src/assets/: events.rs  mod.rs
src/audio/: mod.rs
src/player/: mod.rs  movement.rs  slash.rs  spawn.rs
src/player/input/: gaming_input.rs  mod.rs
src/ui/: auto_save_icon.rs  consent.rs  debug.rs  menu.rs  mod.rs  outline.rs  stats.rs  store.rs
src/world/: debug.rs  mod.rs  state.rs  utils.rs
src/world/camera/: mod.rs
src/world/collisions/: debug.rs  detection.rs  intersection.rs  mod.rs  response.rs  structs.rs
src/world/effects/: mod.rs
src/world/map/: border.rs  building.rs  clouds.rs  debug.rs  flora.rs  grass.rs  mod.rs  telemetry.rs
wasm/: index.html  script.js  styles.css
