[package]
name = "idle-garden"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# https://github.com/rust-lang/cargo/issues/4897
[profile.wasm]
inherits = "release"
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.7.0"
chrono = "0.4.38"
serde = "1.0.219"
serde_json = "1.0.140"

bevy = "0.16.0"
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
# bevy_kira_audio = "0.23.0"

# bevy_tweening = { version = "0.13.0", features = ["bevy_ui"]}
# bevy_trickfilm = "0.10.0"
# bevy_trickfilm_derive = "0.9.0"
