[package]
name = "idle-garden"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# https://github.com/rust-lang/cargo/issues/4897
[profile.wasm]
inherits = "release"
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["Storage"] }
wasm-bindgen = "0.2.100"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5.3.2"

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.7.0"
chrono = "0.4.38"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.26.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

bevy = "0.16.1"
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
bevy_mod_reqwest = "0.19.2"
# bevy_kira_audio = "0.23.0"
bevy_enoki = { path = "./enoki" }

bevy_trickfilm = "0.11.0"
bevy_trickfilm_derive = "0.10.0"
