[package]
name = "enoki_editor"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy_egui = "0.35"
anyhow = "1.0.82"
bevy = "0.16.1"
egui_plot = "0.32"
bevy_enoki = { path = "../enoki" }
crossbeam = { version = "0.8.4", features = [
  "crossbeam-deque",
  "crossbeam-channel",
] }
rfd = "0.15"
ron = "0.10"
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = "0.3.18"
bevy_pancam = "0.18"
